--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -234,8 +234,28 @@
     tabsize=4,
     texcomments=true,
     resetmargins=true,
+    % escapeinside=\#\#,
     % xleftmargin=\parindent
 }
+
+% \let\origthelstnumber\thelstnumber
+% \makeatletter
+% \newcommand*\Suppressnumber{%
+%   \lst@AddToHook{OnNewLine}{%
+%     \let\thelstnumber\relax%
+%      \advance\c@lstnumber-\@ne\relax%
+%     }%
+% }
+
+% \newcommand*\Reactivatenumber[1]{%
+%   \lst@AddToHook{OnNewLine}{%
+%    \let\thelstnumber\origthelstnumber%
+%    \setcounter{lstnumber}{\numexpr#1-1\relax}%
+%    %\advance\c@lstnumber\@ne\relax%
+%   }%
+% }
+
+% \makeatother
 
 \newcommand{\blockfont}{\footnotesize}
 
